--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -1,91 +1,39 @@
-.full-body-container{
-    position: absolute;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    width:100%;
-    height:100%;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    flex-direction: column;
+header {
+  border-bottom: 1px black solid;
+  display: flex;
+  justify-content: space-between;
 }
 
-#google-c{
-    color:#4285F4;
+main {
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
-#google-s{
-    color:#DB4437;
+.nav-right {
+  color: black;
+  text-decoration: none;
 }
 
-#google-4{
-    color:	#F4B400;
+.active {
+  text-decoration: underline;
 }
 
-#google-3{
-    color:	#4285F4;
+/*
+#search-form {
+  margin: auto;
+  width: 50%;
 }
 
-#google-0-1{
-    color:	#0F9D58;
+.submit-box {
+  display: flex;
+  justify-content: right
 }
+*/
 
-#google-0-2{
-    color:#DB4437;
-}
-
-.google-colors{
-    display: flex;
-    align-items: center;
-    font-size: 48px;
-    font-family: 'Open Sans', sans-serif;
-}
-
-.google-colors h1{
-    margin-bottom: 0;
-    margin-right: 3px;
-}
-
-.input-box{
-    border-radius: 50px;
-    border:1px solid black;
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-    padding:12px;
-    width: 600px;
-}
-
-.input-box img{
-    height: 20px;
-    width:20px;
-}
-
-.top-text{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.input-box input{
-    width: 100%;
-    margin-left: 10px;
-    font-size: 16px;
-    border: none;
-    outline: 0;
-}
-
-#answer-box{
-    width: 700px;
-    margin-top:50px; 
-}
-
-.episode-title{
-    font-family: 'Kanit', sans-serif;
-}
-
-.episode-desc{
-    font-family: 'Montserrat', sans-serif;
+.input-box {
+  margin: auto;
+  width: 50%;
+  background-color: lightgray;
+  border: 1px solid black;
+  border-radius: 5px;
 }
