--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -5,51 +5,63 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Montserrat&family=Open+Sans:wght@500&display=swap" rel="stylesheet">
 <body>
-    <div class="full-body-container">
-        <div class="top-text">
-            <div class="google-colors">
-                <h1 id="google-4">4</h1>
-                <h1 id="google-3">3</h1>
-                <h1 id="google-0-1">0</h1>
-                <h1 id="google-0-2">0</h1>
-            </div>
-            <div class="input-box" onclick="sendFocus()">
-                <img src="{{ url_for('static', filename='images/mag.png') }}" />
-                <input placeholder="Search for a Keeping up with the Kardashians episode" id="filter-text-val" onkeyup="filterText()">
-            </div>
-        </div>
-        <div id="answer-box">
+  <header>
+    <div class="nav-left">
+      <h3>Bias Free News</h3>
+    </div>
+    <div class="nav-right">
+      <a href="base.html" class="active">Home</a>
+      <a href="about.html">About Us</a>
+    </div>
+  </header>
 
-        </div>
+  <main>
+    <!-- Search input -->
+    <!--<form id="search-form" action="base" method="post" novalidate>
+      <div>
+        <label for="user-input-request">Topic:</label>
+        <input type="text" name="user-input" id="user-input-request" />
+      </div>
+      <div class="submit-box">
+        <input id="submit-search" type="submit" value="submit" class="submit" />
+      </div>
+    </form>-->
+
+    <div class="input-box" onclick="sendFocus()">
+      <input placeholder="Search for an article topic" id="text-val" onkeyup="filterText()">
     </div>
 
+    <div id="results-box">
+
+    </div>
+
+    <!-- Search results -->
     <script>
+      function resultsBoxTemplate(title,author,bias){
+          return `<div>
+              <h3 class='article-title'>${title}</h3>
+              <p class='article-desc'>${author}</p>
+              <p class='article-rating'>Bias: ${bias}</p>
+          </div>`
+      }
 
-        function answerBoxTemplate(title,titleDesc,rating){
-            return `<div class=''>
-                <h3 class='episode-title'>${title}</h3>
-                <p class='episode-desc'>${titleDesc}</p>
-                <p class='episode-rating'>IMDB Rating: ${rating}</p>
-            </div>`
-        }
+      function sendFocus(){
+          document.getElementById('text-val').focus()
+      }
 
-        function sendFocus(){
-            document.getElementById('filter-text-val').focus()
-        }
-
-        function filterText(){
-            document.getElementById("answer-box").innerHTML = ""
-            console.log(document.getElementById("filter-text-val").value)
-            fetch("/episodes?" + new URLSearchParams({ title: document.getElementById("filter-text-val").value }).toString())
-            .then((response) => response.json())
-            .then((data) => data.forEach(row => {
-                
-                let tempDiv = document.createElement("div")
-                tempDiv.innerHTML = answerBoxTemplate(row.title,row.descr,row.imdb_rating)
-                document.getElementById("answer-box").appendChild(tempDiv)
-            }));
-
-        }
-            
+      function filterText(){
+          document.getElementById("results-box").innerHTML = ""
+          console.log(document.getElementById("text-val").value)
+          fetch("/articles?" + new URLSearchParams({ title: document.getElementById("text-val").value }).toString())
+          .then((response) => response.json())
+          .then((data) => data.forEach(row => {
+              
+              let tempDiv = document.createElement("div")
+              tempDiv.innerHTML = resultsBoxTemplate(row.title,row.descr,row.imdb_rating)
+              document.getElementById("results-box").appendChild(tempDiv)
+          }));
+      }      
     </script>
+  </main>
+
 </body>
