--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -7,7 +7,7 @@
 <body>
   <header>
     <div class="nav-left">
-      <h3>Bias Free News</h3>
+      <h3>BFN</h3>
     </div>
     <div class="nav-right">
       <a href="base.html" class="active">Home</a>
@@ -26,13 +26,16 @@
         <input id="submit-search" type="submit" value="submit" class="submit" />
       </div>
     </form>-->
+    <div header-and-form-box>
+      <h1 class="center-title">Bias Free News</h1>
 
-    <div class="input-box" onclick="sendFocus()">
-      <input placeholder="Search for an article topic" id="text-val" onkeyup="filterText()">
-    </div>
+      <div class="input-box" onclick="sendFocus()">
+        <input placeholder="Search for an article topic" id="text-val" onkeyup="filterText()">
+      </div>
 
-    <div id="results-box">
+      <div id="results-box">
 
+      </div>
     </div>
 
     <!-- Search results -->
