fixed more styling

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -7,11 +7,11 @@
 <body>
   <header>
     <div class="nav-left">
-      <h3>BFN</h3>
+      <p class="nav-icon">BFN</p>
     </div>
     <div class="nav-right">
-      <a href="base.html" class="active">Home</a>
-      <a href="about.html">About Us</a>
+      <a href="templates/base.html" class="active">Home</a>
+      <a href="templates/about.html" class="inactive">About Us</a>
     </div>
   </header>
 
@@ -26,7 +26,7 @@
         <input id="submit-search" type="submit" value="submit" class="submit" />
       </div>
     </form>-->
-    <div header-and-form-box>
+    <div class="header-and-form-box">
       <h1 class="center-title">Bias Free News</h1>
 
       <div class="input-box" onclick="sendFocus()">
