--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -2,6 +2,11 @@ header {
   border-bottom: 1px black solid;
   display: flex;
   justify-content: space-between;
+  padding: 5px;
+}
+
+body {
+  margin: 0px;
 }
 
 main {
@@ -9,10 +14,19 @@ main {
   margin-right: 5px;
 }
 
+.nav-icon {
+  margin: 0px;
+  font-size: 2em;
+}
+
 .nav-right a {
   color: black;
-  text-decoration: none;
   font-size: 2em;
+  margin-right: 0.75em;
+}
+
+.inactive {
+  text-decoration: none;
 }
 
 .active {
@@ -32,14 +46,25 @@ main {
 */
 
 .input-box {
-  /*margin: auto;
-  width: 50%;*/
+  margin: auto;
+  width: 50%;
+}
+
+.input-box input{
   background-color: lightgray;
   border: 1px solid black;
   border-radius: 5px;
+  width: 100%;
 }
 
 .header-and-form-box {
   margin: auto;
   width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.center-title {
+  text-align: center;
 }
