--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -3,56 +3,70 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kanit&family=Montserrat&family=Open+Sans:wght@500&display=swap"
-    rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Kanit&family=Montserrat&family=Open+Sans:wght@500&display=swap" rel="stylesheet">
 <body>
-    <div class="full-body-container">
-        <div class="top-text">
-            <div class="google-colors">
-                <h1 id="google-4">4</h1>
-                <h1 id="google-3">3</h1>
-                <h1 id="google-0-1">0</h1>
-                <h1 id="google-0-2">0</h1>
-            </div>
-            <div class="input-box" onclick="sendFocus()">
-                <img src="{{ url_for('static', filename='images/mag.png') }}" />
-                <input placeholder="Search for a Keeping up with the Kardashians episode" id="filter-text-val"
-                    onkeyup="filterText()">
-            </div>
-        </div>
-        <div id="answer-box">
+  <header>
+    <div class="nav-left">
+      <p class="nav-icon">BFN</p>
+    </div>
+    <div class="nav-right">
+      <a href="templates/base.html" class="active">Home</a>
+      <a href="templates/about.html" class="inactive">About Us</a>
+    </div>
+  </header>
 
-        </div>
+  <main>
+    <!-- Search input -->
+    <!--<form id="search-form" action="base" method="post" novalidate>
+      <div>
+        <label for="user-input-request">Topic:</label>
+        <input type="text" name="user-input" id="user-input-request" />
+      </div>
+      <div class="submit-box">
+        <input id="submit-search" type="submit" value="submit" class="submit" />
+      </div>
+    </form>-->
+    <div class="header-and-form-box">
+      <h1 class="center-title">Bias Free News</h1>
+
+      <div class="input-box" onclick="sendFocus()">
+        <input placeholder="Search for an article topic" id="filter-text-val" onkeyup="filterText()">
+      </div>
+
+      <div id="answer-box">
+
+      </div>
     </div>
 
+    <!-- Search results -->
     <script>
 
-        function answerBoxTemplate(title, titleDesc, rating) {
-            return `<div class=''>
-                <h3 class='episode-title'>${title}</h3>
-                <p class='episode-desc'>${titleDesc}</p>
-                <p class='episode-rating'>Score: ${rating}</p>
-            </div>`
-        }
+      function answerBoxTemplate(title, titleDesc, rating) {
+        return `<div class=''>
+          <h3 class='episode-title'>${title}</h3>
+          <p class='episode-desc'>${titleDesc}</p>
+          <p class='episode-rating'>Score: ${rating}</p>
+        </div>`
+      }
 
-        function sendFocus() {
-            document.getElementById('filter-text-val').focus()
-        }
+      function sendFocus() {
+        document.getElementById('filter-text-val').focus()
+      }
 
-        function filterText() {
-            document.getElementById("answer-box").innerHTML = ""
-            console.log(document.getElementById("filter-text-val").value)
-            fetch("/articles?" + new URLSearchParams({ title: document.getElementById("filter-text-val").value }).toString())
-                .then((response) => response.json())
-                .then((data) => data.forEach(row => {
+      function filterText() {
+        document.getElementById("answer-box").innerHTML = ""
+        console.log(document.getElementById("filter-text-val").value)
+        fetch("/articles?" + new URLSearchParams({ title: document.getElementById("filter-text-val").value }).toString())
+          .then((response) => response.json())
+          .then((data) => data.forEach(row => {
+            let tempDiv = document.createElement("div")
+            tempDiv.innerHTML = answerBoxTemplate(row.title, row.text.substring(0, 200), row.score)
+            document.getElementById("answer-box").appendChild(tempDiv)
+          }));
 
-                    let tempDiv = document.createElement("div")
-                    tempDiv.innerHTML = answerBoxTemplate(row.title, row.text.substring(0, 200), row.score)
-                    document.getElementById("answer-box").appendChild(tempDiv)
-                }));
-
-        }
+      }
 
     </script>
+  </main>
+
 </body>
