added comment to base file

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -52,6 +52,10 @@ XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX-->
             direction = "Center";
             directionclass = "center"
         }
+        /*ADD DATE TO ARTICLES XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX*/
+
         return `<div class='record-box'>
           <a class="link" href="${url}">
             <h3 class='article-title'>${title}</h3>
