--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
   <title>Bias Free News</title>
+  <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
