new logo and background change

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-  <title>Bias Free News</title>
+  <title>Split</title>
   <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@ XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX-->
     <!-- Search input -->
     <div class="header-and-form-box">
       <!--<h1 class="center-title">Bias Free News</h1>-->
-      <img class="center-banner" src="{{ url_for('static', filename='images/banner7.png') }}">
+      <img class="center-banner" src="{{ url_for('static', filename='images/splitlogocolored.png') }}">
 
       <div class="input-box" onclick="sendFocus()">
         <input placeholder="Search for an article topic" id="filter-text-val" onkeyup="filterText()">
