--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -91,7 +91,7 @@ body {
   }
 
   100% {
-    transform: translateY(-50vh) scale(1);
+    transform: translateY(-60vh) scale(1);
   }
 }
 
@@ -235,6 +235,7 @@ main {
   -webkit-appearance: none;
   width: 100%;
   height: 20px;
+  border: 3px solid black;
 }
 
 .slider::-webkit-slider-thumb {
@@ -248,6 +249,23 @@ main {
 .slider-container {
   width: 100%;
   display: none;
+}
+
+button {
+  width: 50%;
+  height: 50px;
+  font-size: 20px;
+  margin: 10px;
+  border-radius: 10px;
+}
+
+button:hover {
+  color: white;
+  background-color: black;
+}
+
+.center {
+  text-align: center;
 }
 
 .marker {
