--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -25,7 +25,7 @@
     <!-- Search input -->
     <div class="header-and-form-box">
       <!--<h1 class="center-title">Bias Free News</h1>-->
-      <img class="center-banner" src="{{ url_for('static', filename='images/splitlogocolored.png') }}">
+      <img class="center-banner" src="{{ url_for('static', filename='images/newlogo.png') }}">
 
       <div class="input-box" onclick="sendFocus()">
         <input placeholder="Search for an article topic" id="filter-text-val" onkeyup="filterText()">
@@ -42,32 +42,43 @@
         return min2 + (value - min1) * (max2 - min2) / (max1 - min1);
       }
       function answerBoxTemplate(title, titleDesc, rating, url) {
+        console.log(rating);
         let absrating = Math.abs(rating);
+        console.log("absrating: " + absrating);
         let direction;
         let directionclass;
+        let color_num = absrating + 0.2;
+        console.log("color_num: " + color_num);
+        // left
         if (rating < -0.05) {
-          color_num = mapValue(absrating, 0, 1, 0, 255)
-          color = "rgb(0, 0, " + color_num + ")"
+          color = "rgb(0, 168, 243," + color_num + ")"
+          
+          // right
         } else if (rating > 0.05) {
-          color = mapValue(absrating, 0, 1, 0, 255)
-          color = "rgb(" + color_num + ", 0, 0)"
+          color = "rgb(236, 28, 36," + color_num + ")"
+
+          // center
         } else {
-          color = "rgb(125, 125, 125)"
+          color = "rgb(255, 255, 255, 1)"
         }
         /*ADD DATE TO ARTICLES XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX*/
 
-        return `<div class='record-box' style='background: ${color}'>
-          <a class="link" href="${url}" target="_blank">
-            <h3 class='article-title'>${title}</h3></a>
-            <div class='slider-container'>
-            <h4>Was our article political bias rating correct?</h4>
-            <div class="center">
-            <input id = 'slider' type='range' min = '0' max='100' value='50' class='slider'>
-            <button id= 'submit' onclick="submitScore()">Submit</button>
-            </div>
-            </div>  
+        return `
+        <div class='record-box'>
+          <div class="record-box-overlay" style='background: ${color}'>
+            <a class="link" href="${url}" target="_blank">
+              <h3 class='article-title'>${title}</h3></a>
+              <div class='slider-container'>
+                  <h4>Was our article political bias rating correct?</h4>
+                <div class="center">
+                  <input id = 'slider' type='range' min = '0' max='100' value='50' class='slider'>
+                  <button id= 'submit' onclick="submitScore()">Submit</button>
+                </div>
+              </div> 
+            </a> 
+          </div>
         </div>`
       }
       function submitScore() {
