--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -53,18 +53,16 @@
         // left
         if (rating < -0.05) {
           color = "rgb(0, 168, 243," + color_num + ")"
-          marker = mapValue(rating - 0.2, -1.0, 1.0, 1, 99)
 
           // right
         } else if (rating > 0.05) {
           color = "rgb(236, 28, 36," + color_num + ")"
-          marker = mapValue(rating + 0.2, -1, 1, 1, 99)
 
           // center
         } else {
           color = "rgb(255, 255, 255, 1)"
-          marker = mapValue(rating, -1, 1, 1, 99)
         }
+        marker = mapValue(rating, -1, 1, 0, 100)
         /*ADD DATE TO ARTICLES XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX*/
@@ -72,7 +70,7 @@
         <div class='record-box'>
           <div class="record-box-overlay" style='background: ${color}'>
             <a class="link" href="${url}" target="_blank">
-              <h3 class='article-title'>${title}</h3></a>
+              <h3 id = "title2" class='article-title'>${title}</h3></a>
               <div class='slider-container'>
                   <h4>Was our article political bias rating correct?</h4>
                 <div class="center">
@@ -89,16 +87,28 @@
       function submitScore() {
         var clickedButton = event.target;
         var answerBox = clickedButton.closest('.record-box');
+        var slider = answerBox.querySelector('.slider');
+        var titleElement = answerBox.querySelector('.article-title');
+        var markerElement = answerBox.querySelector('.fixed-marker');
+
+        var score = parseFloat(slider.value);
+        var title = titleElement.innerText;
+        var markerStyle = markerElement.style.left;
+        var marker = parseFloat(markerStyle.replace('left: ', '').replace('%;', ''));
+
+        score = mapValue(score, 0, 100, -1, 1);
+        marker = mapValue(marker, 0, 100, -1, 1);
+
         answerBox.innerHTML = `<div class="center"><h3>Thank you for your response</h3>
         <img class = "check" src="{{ url_for('static', filename='images/check_mark.png')}}"> </div>`;
-        var slider = document.getElementById('slider');
-        var score = slider.value;
         fetch('/update-score', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
           },
-          body: JSON.stringify({ user_score: score, current_score: rating }),
+          body: JSON.stringify({ user_score: score, current_score: marker, title: title }),
+        }).catch(error => {
+          console.error('Error', error)
         })
       }
 
