--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -209,9 +209,22 @@ main {
   color: black;
 }
 
+#answer-box {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+#left-answer-box {
+  width: 47%;
+}
+#right-answer-box {
+  width: 47%;
+}
+
 .record-box {
-  /*border: 2px solid white;*/
-  width: calc(100%/ 3);
+  /*border: 2px solid white;
+  width: calc(100%/ 3);*/
   justify-content: center;
   border-radius: 20px;
   margin-bottom: 20px;
@@ -229,11 +242,19 @@ main {
   margin: 0px;
 }
 
-/*
-.record-box h4 {
-  color: white;
+.date {
+  margin-bottom: 0px;
+  margin-top: 5px;
 }
-*/
+
+.record-box:hover .slider {
+  display: block;
+}
+
+.record-box:hover .slider-container {
+  display: block;
+}
+
 .slider {
   display: none;
   width: 100%;
@@ -295,11 +316,19 @@ button:hover {
   top: 20%;
 }
 
-
-.record-box:hover .slider {
-  display: block;
+.hidden {
+  display: none;
 }
 
-.record-box:hover .slider-container {
-  display: block;
+/*
+#container {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
+
+.center-banner {
+  display: block;
+  margin: 0 auto;
+}
+*/
