--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -12,6 +12,14 @@ body {
   background: black;
 }
 
+.description {
+  text-align: center;
+  color: white;
+  background-color: black;
+  width: 70%;
+  margin-bottom: 20px;
+}
+
 .logos {
   position: fixed;
   /* Change to fixed */
@@ -95,6 +103,28 @@ body {
   }
 }
 
+@keyframes expand {
+  0% {
+    height: 0;
+  }
+
+  100% {
+    height: 100vh;
+  }
+}
+
+body::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 21px;
+  height: 0;
+  background-color: white;
+  animation: expand 0.5s linear forwards;
+  z-index: -1;
+  left: 49.07%;
+}
 
 main {
   margin-left: 5px;
@@ -207,6 +237,10 @@ main {
 .link {
   text-decoration: none;
   color: black;
+}
+
+.link:hover {
+  text-decoration: underline;
 }
 
 #answer-box {
