--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -26,6 +26,10 @@
     <div class="header-and-form-box">
       <!--<h1 class="center-title">Bias Free News</h1>-->
       <img class="center-banner" src="{{ url_for('static', filename='images/splitlogo.png') }}">
+      <div class="description">Split is an election article search engine that seperates articles by political leaning
+        calculated by our own models.
+        We take user inputs
+        to change the political leaning score and converge towards more accurate scores.</div>
 
       <!--<div id="container">
         <img class="center-banner" src="{{ url_for('static', filename='images/splitlogo.png') }}">
@@ -50,11 +54,11 @@
       </div>-->
 
       <div id="answer-box">
-        <div id="left-answer-box"> 
+        <div id="left-answer-box">
         </div>
         <div id="middle-answer-box">
         </div>
-        <div id="right-answer-box"> 
+        <div id="right-answer-box">
         </div>
       </div>
 
@@ -63,41 +67,43 @@
     <!-- Search results -->
     <script>
 
-    /*document.addEventListener("DOMContentLoaded", function() {
-        // Get the center banner element
-        var centerBanner = document.querySelector('.center-banner');
-        var container = document.getElementById('container');
+      /*document.addEventListener("DOMContentLoaded", function() {
+          // Get the center banner element
+          var centerBanner = document.querySelector('.center-banner');
+          var container = document.getElementById('container');
+  
+          // Create a new image element for the extended line
+          var extendedLine = new Image();
+          extendedLine.src = "{{ url_for('static', filename='images/whiteline.png') }}"; // Change to the path of your white line image
+          extendedLine.alt = 'Extended Line';
+          extendedLine.style.position = 'absolute';
+          extendedLine.style.left = (centerBanner.offsetLeft + centerBanner.width / 2) + 'px';
+          extendedLine.style.top = (centerBanner.offsetTop + centerBanner.height / 2) + 'px';
+          extendedLine.style.transform = 'translate(-50%, -50%)'; // Center the image
+          extendedLine.style.width = centerBanner.offsetWidth + 'px'; // Same width as centerBanner
+          extendedLine.style.height = '0px'; // Initially set height to 0
+          container.appendChild(extendedLine);
+  
+          // Animate the extension of the line
+          var duration = 3000; // Animation duration in milliseconds
+          var start = null;
+          function extendLine(timestamp) {
+              if (!start) start = timestamp;
+              var progress = timestamp - start;
+              var percentage = progress / duration;
+              //extendedLine.style.width = (centerBanner.offsetWidth * percentage) + 'px';
+              extendedLine.style.height = (centerBanner.offsetHeight * 10 * percentage) + 'px';
+              if (progress < duration) {
+                  requestAnimationFrame(extendLine);
+              }
+          }
+          requestAnimationFrame(extendLine);
+      });*/
 
-        // Create a new image element for the extended line
-        var extendedLine = new Image();
-        extendedLine.src = "{{ url_for('static', filename='images/whiteline.png') }}"; // Change to the path of your white line image
-        extendedLine.alt = 'Extended Line';
-        extendedLine.style.position = 'absolute';
-        extendedLine.style.left = (centerBanner.offsetLeft + centerBanner.width / 2) + 'px';
-        extendedLine.style.top = (centerBanner.offsetTop + centerBanner.height / 2) + 'px';
-        extendedLine.style.transform = 'translate(-50%, -50%)'; // Center the image
-        extendedLine.style.width = centerBanner.offsetWidth + 'px'; // Same width as centerBanner
-        extendedLine.style.height = '0px'; // Initially set height to 0
-        container.appendChild(extendedLine);
 
-        // Animate the extension of the line
-        var duration = 3000; // Animation duration in milliseconds
-        var start = null;
-        function extendLine(timestamp) {
-            if (!start) start = timestamp;
-            var progress = timestamp - start;
-            var percentage = progress / duration;
-            //extendedLine.style.width = (centerBanner.offsetWidth * percentage) + 'px';
-            extendedLine.style.height = (centerBanner.offsetHeight * 10 * percentage) + 'px';
-            if (progress < duration) {
-                requestAnimationFrame(extendLine);
-            }
-        }
-        requestAnimationFrame(extendLine);
-    });*/
-
-
-
+      function startAnimation() {
+        document.body.classList.add('expanded');
+      }
       function mapValue(value, min1, max1, min2, max2) {
         return min2 + (value - min1) * (max2 - min2) / (max1 - min1);
       }
@@ -130,14 +136,15 @@
           <div class="record-box-overlay" style='background: ${color}'>
             <a class="link" href="${url}" target="_blank">
               <h3 id="title2" class='article-title'>${title}</h3>
-              <p class="date">${newdate}</p>
             </a>
+            <p class="date">${newdate}</p>
               <div class='slider-container'>
                   <h4>Was our article political bias rating correct?</h4>
                 <div class="center">
                   <input id = 'slider' type='range' min = '0' max='100' value='50' class='slider'>
                   <div id="fixedMarker" class="fixed-marker" style="left: ${marker}%;">
                     </div>
+                    <div class="votes">Votes:</div>
                   <button id= 'submit' onclick="submitScore()">Submit</button>
                 </div>
               </div> 
@@ -146,7 +153,7 @@
         </div>`
       }
 
-      function middleAnswerBoxTemplate(title, titleDesc, rating, url, date) {
+      function middleAnswerBoxTemplate(title, titleDesc, rating, url, date, votes) {
         console.log(rating);
         let direction;
         let directionclass;
@@ -159,13 +166,14 @@
           <div class="record-box-overlay" style='background: ${color}'>
             <a class="link" href="${url}" target="_blank">
               <h3 id="title2" class='article-title'>${title}</h3>
-              <p class="date">${newdate}</p>
             </a>
+            <p class="date">${newdate}</p>
               <div class='slider-container'>
                   <h4>Was our article political bias rating correct?</h4>
                 <div class="center">
                   <input id = 'slider' type='range' min = '0' max='100' value='50' class='slider'>
                   <div id="fixedMarker" class="fixed-marker" style="left: ${marker}%;">
+                    <div class="votes">Votes:</div>
                     </div>
                   <button id= 'submit' onclick="submitScore()">Submit</button>
                 </div>
@@ -173,6 +181,10 @@
             </a> 
           </div>
         </div>`
+      }
+
+      function expand() {
+
       }
 
       function submitScore() {
@@ -232,7 +244,7 @@
         leftlist.forEach((json) => {
           console.log(json)
           let tempDiv = document.createElement("div");
-          tempDiv.innerHTML = answerBoxTemplate(json.title, (json.text.substring(0, 200) + "..."), json.score, json.url, json.date);
+          tempDiv.innerHTML = answerBoxTemplate(json.title, (json.text.substring(0, 200) + "..."), json.score, json.url, json.date, json.votes);
           document.getElementById("left-answer-box").appendChild(tempDiv);
         });
       }
@@ -242,7 +254,7 @@
         rightlist.forEach((json) => {
           console.log(json)
           let tempDiv = document.createElement("div");
-          tempDiv.innerHTML = answerBoxTemplate(json.title, (json.text.substring(0, 200) + "..."), json.score, json.url, json.date);
+          tempDiv.innerHTML = answerBoxTemplate(json.title, (json.text.substring(0, 200) + "..."), json.score, json.url, json.date, json.votes);
           document.getElementById("right-answer-box").appendChild(tempDiv);
         });
       }
@@ -252,7 +264,7 @@
         middlelist.forEach((json) => {
           console.log(json)
           let tempDiv = document.createElement("div");
-          tempDiv.innerHTML = middleAnswerBoxTemplate(json.title, (json.text.substring(0, 200) + "..."), json.score, json.url, json.date);
+          tempDiv.innerHTML = middleAnswerBoxTemplate(json.title, (json.text.substring(0, 200) + "..."), json.score, json.url, json.date, json.votes);
           document.getElementById("middle-answer-box").appendChild(tempDiv);
         });
       }
@@ -263,7 +275,7 @@
         alllist.forEach((json) => {
           console.log(json)
           let tempDiv = document.createElement("div");
-          tempDiv.innerHTML = answerBoxTemplate(json.title, (json.text.substring(0, 200) + "..."), json.score, json.url, json.date);
+          tempDiv.innerHTML = answerBoxTemplate(json.title, (json.text.substring(0, 200) + "..."), json.score, json.url, json.date, json.votes);
           document.getElementById("answer-box").appendChild(tempDiv);
         });
       }
